Move CommandBarCtrl definition from js module file to a dedicated angular control file

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -17,6 +17,9 @@
     <!-- bootstrap-commandbar -->
     <script src="../js/bootstrap-commandbar.js" type="text/javascript"></script>
     <script src="../js/bootstrap-commandbar-angular.js" type="text/javascript"></script>
+
+    <!-- angular control only for demo purpose -->
+    <script src="js/angular-commandbar-ctrl.js" type="text/javascript"></script>
 </head>
 <body class="container" ng-app="commandBar" onload="prettyPrint()">
     <h1>Bootstrap Angular Commandbar Demo</h1>
